[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waas-mcp"
version = "0.1.0"
description = "MCP server for YC Work at a Startup (WAAS) API"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "requests",
    "python-dotenv",
]

[project.scripts]
waas = "src.waas:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
